@@ -9,6 +9,9 @@ Permitir no guardar snapshot al salir de ZEsarUX
 Permitir definir Alt Izq, Ctrl Izq, Shift Izq o TAB como acción de Fuego de Joystick
 Permitir cambiar posicion de lectura actual en Visor de Cinta de Entrada para archivos .tap
 
+Mejorado ZX Vision:
+- Al seleccionar estilo de ZX Vision Style, se aplica al mover el cursor
+
 * Correcciones:
 
 Quitar indicador de buffer lleno al pulsar shift+e en ventana de Fuente de sonido externa
