@@ -10032,6 +10032,144 @@ void zxvision_restart_all_background_windows(void)
 
 }
 
+//Cambia el color del caracter espacio en una ventana dada
+void zxvision_change_space_colour(zxvision_window *w,int papel)
+{
+    //Cambiar caracter espacio de fondo
+    int total_width=w->total_width;
+    int total_height=w->total_height;
+
+    int buffer_size=total_width*total_height;
+
+
+    //Inicializarlo todo con texto blanco
+
+    int i;
+    overlay_screen *p;
+    p=w->memory;
+
+    for (i=0;i<buffer_size;i++) {
+        if (p->caracter==' ') {
+
+            p->papel=papel;
+
+        }
+
+        p++;
+    }
+}
+
+//Funcion para reaplicar colores en las ventanas existentes
+//De momento solo se usa por la funcion de cambio de estilo de gui, mientras se mueve el cursor, y sin tener
+//que recrear todas las ventanas, se cambian los colores
+void zxvision_reapply_style_colours_all_windows(void)
+{
+	if (!menu_allow_background_windows) return;
+
+
+	//Si no hay multitask, no restaurar, porque esto puede implicar que se abran ventanas que necesitan multitask,
+	//y se quejen con "This window needs multitask enabled", y ese mensaje no se ve el error, y espera una tecla
+	if (!menu_multitarea) return;
+
+    if (zxvision_current_window==NULL) return;
+
+
+
+    //Primero ir a buscar la de abajo del todo
+    zxvision_window *pointer_window;
+
+    pointer_window=zxvision_find_first_window_below_this(zxvision_current_window);
+
+    zxvision_window *initial_current_window=zxvision_current_window;
+
+    //Y ahora de ahi hacia arriba
+    int salir=0;
+    do {
+
+        //Hay que ir con ojo con los punteros a ventana. Dado que lo que haremos sera reseguir las ventanas,
+        //empezando desde la de mas abajo, antes de reabrir una, guardamos el puntero a la siguiente,
+        //reabrimos y vamos a la siguiente
+
+        //Y finalizamos cuando la que hemos redibujado era la misma que la inicial
+        /*
+        Ejemplo tenemos ventanas:
+        A
+        B
+        C
+        D
+        Donde la actual es la A
+
+        La primera que encontramos abajo es la D, Al reabrirla tendremos:
+
+        D
+        A
+        B
+        C
+
+        La siguiente la C
+
+        C
+        D
+        A
+        B
+
+        La siguiente la B
+        B
+        C
+        D
+        A
+
+        Y la siguiente la A
+        A
+        B
+        C
+        D
+
+        Y entonces es cuando verá que la última que hemos reabierto, la A, era la inicial A, y finaliza
+
+        */
+
+        //printf("Puntero ventana: %p\n",pointer_window);
+        if (pointer_window==NULL) {
+            debug_printf(VERBOSE_DEBUG,"Window is null. Exiting");
+            salir=1;
+        }
+        else {
+            //printf("ventana: %s\n",pointer_window->geometry_name);
+
+            //Obtenemos la siguiente ventana antes de borrar la actual
+            zxvision_window *next_window=pointer_window->next_window;
+
+            pointer_window->dirty_must_draw_contents=1;
+            pointer_window->dirty_user_must_draw_contents=1;
+            pointer_window->default_paper=ESTILO_GUI_PAPEL_NORMAL;
+
+
+            //Cambiar caracter espacio de fondo
+            zxvision_change_space_colour(pointer_window,ESTILO_GUI_PAPEL_NORMAL);
+
+            //El resto de colores se refrescaran por si solos cuando el overlay de cada ventana diga que hay que refrescar
+
+
+            //Si la que hemos redibujado era la inicial, salimos
+            if (pointer_window==initial_current_window) {
+                debug_printf(VERBOSE_DEBUG,"Redrawn window was the last. Exiting");
+                salir=1;
+            }
+
+            else {
+                pointer_window=next_window;
+            }
+
+        }
+
+
+    } while(!salir);
+
+
+
+}
+
 
 void zxvision_set_draw_window_parameters(zxvision_window *w)
 {
